フロント実装2

--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -25,6 +25,7 @@
   .input-box
    %input.input-box__text
    %label.input-box__icon
-    =icon('fas', 'image')
+    = icon('fas', 'image')
+    %input.file{type: "file"}
   %input.submit-btn{:type => "submit", :value => "SEND"} 
     
