--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -68,6 +68,9 @@
         position: absolute;
         top: 10px;
         right: 10px;
+        .file{
+          display: none;
+        }
       }
     }
     .submit-btn{
