User登録機能の実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,11 @@
 @import "./reset";
+@import"config/colors";
 @import "./messages";
 @import"./index";
 @import "./side";
 @import"./main_chat";
+@import"./user";
+@import"modules/flash";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 
