--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -8,17 +8,17 @@
  .message-list
   .message-list__box
    .message-list__box--name
-    %p1.name 吉田
+    %p1.name 田中
     %p2.date 12/4(wed) 17:40:01
    .message-list__box--message hhhhhh
   .message-list__box
    .message-list__box--name
-    %p1.name 吉田
+    %p1.name 田中
     %p2.date 12/4(wed) 17:40:01
    .message-list__box--message hhhhhh
   .message-list__box
    .message-list__box--name
-    %p1.name 吉田
+    %p1.name 田中
     %p2.date 12/4(wed) 17:40:01
    .message-list__box--message hhhhhh
  .message-form
