--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -1,13 +1,14 @@
 .side
  .user-name
   .user-name__box
-   %p.user-name__box--name masa 
+   %p.user-name__box--name 
+    = current_user.name
    %ul.user-name__box--icon
     %li.edit-icon
      =link_to "#", class: "contents__btn" do
       = icon('fas', 'edit')
     %li.cog-icon
-     =link_to "#", class: "contents__btn" do
+     =link_to edit_user_path(current_user), class: "contents__btn" do
       = icon('fas', 'cog')
  .group-list
   .group-list__box
