ビューの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import"./index";
 @import "./side";
 @import"./main_chat";
+@import"./group";
 @import"./user";
 @import"modules/flash";
 @import "font-awesome-sprockets";
