--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,7 +5,7 @@
     = current_user.name
    %ul.user-name__box--icon
     %li.edit-icon
-     =link_to "#", class: "contents__btn" do
+     =link_to new_group_path, class: "contents__btn" do
       = icon('fas', 'edit')
     %li.cog-icon
      =link_to edit_user_path(current_user), class: "contents__btn" do
