自動更新機能の実装

--- a/app/assets/stylesheets/_main_chat.scss
+++ b/app/assets/stylesheets/_main_chat.scss
@@ -27,7 +27,9 @@
   }
   .message{
     background-color: #fafafa;
+    box-sizing: border-box;
     height: calc(100vh - 100px - 90px);
+    overflow: scroll;
     &-box{
       margin-left: 40px;
       padding-bottom: 46px;
